--- a/.github/workflows/typeset.yml
+++ b/.github/workflows/typeset.yml
@@ -29,6 +29,7 @@ jobs:
                 texlive-fonts-recommended \
                 latexmk \
                 lmodern \
+                texlive-bibtex-extra \
                 build-essential
 
     - name: Generate pdfs 
